# integrations-python

./: .gitignore  README.md
.github/workflows/: publish-pypi.yml
composio/: pyproject.toml
gemini/: pyproject.toml
gemini/src/: service.py
gemini/src/functions/: generate_content.py
gemini/src/restack_integrations_gemini/functions/: generate_content.py
google_gemini/: pyproject.toml
openai/: pyproject.toml
openai/functions/chat/: completions_base.py
openai/integrations_python_openai/: __init__.py
openai/integrations_python_openai/utils/: client.py
openai/src/restack_integrations_openai/functions/chat/: completions_base.py
openai/src/restack_openai/: service.py
restackio-integrations-openai/: pyproject.toml
restackio-integrations-toolhouse/: pyproject.toml
toolhouse/: pyproject.toml
toolhouse/src/restack_toolhouse/: service.py
